--- a/src/app/components/application/create-application/create-application.component.html
+++ b/src/app/components/application/create-application/create-application.component.html
@@ -13,10 +13,9 @@
             <table class="table align-items-center mb-0">
               <thead>
                 <tr class="text-center">
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Id</th>
-                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Application Id</th>
-                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">User Id</th>
-                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Bootcamp Id</th>
+                  <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Aday Adı</th>
+                  <!-- <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">User Id</th> -->
+                  <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Bootcamp Adı</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Durum</th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"> İşlemler</th>
 
@@ -25,25 +24,14 @@
               </thead>
               <tbody *ngFor="let application of applications" class="text-center">
                 <tr>
-                  <td>
-                    <div class="d-flex px-2 py-1">
-                      <div>
-                      </div>
-                      <td >
-                        <p class="text-xs font-weight-bold mb-0"></p>
-                        <p class="text-xs text-secondary mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{application.id}}</p>
-                      </td>
-                    </div>
-                  </td>
+                  
                   <td>
                     <p class="text-xs font-weight-bold mb-0"></p>
-                    <p class="text-xs text-secondary mb-0">{{application.applicantId}}</p>
+                    <p class="text-xs text-secondary mb-0">{{application.applicantName}}</p>
                   </td>
-                  <td class="align-middle text-center text-sm">
-                    <span class="mb-0 text-sm">{{application.userId}}</span>
-                  </td>
+
                   <td class="align-middle text-center">
-                    <span class="text-secondary text-xs font-weight-bold">{{application.bootcampId}}</span>
+                    <span class="text-secondary text-xs font-weight-bold">{{application.bootcampName}}</span>
                   </td>
                   <td class="align-middle">
                     <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
