--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
@@ -21,8 +21,7 @@
             <table class="table align-items-center mb-0">
               <thead>
                 <tr class="text-center">
-                  <th class="text-uppercase text-dark text-xxs font-weight-bolder">Id</th>
-                  <th class="text-uppercase text-dark text-xxs font-weight-bolder  ps-2">Instructor Id</th>
+                  <th class="text-uppercase text-dark text-xxs font-weight-bolder  ps-2">Eğitmen Adı</th>
                   <th class="text-center text-uppercase text-dark text-xxs font-weight-bolder ">Bootcamp Adı</th>
                   <th class="text-center text-uppercase text-dark text-xxs font-weight-bolder ">Başlangıç Tarihi</th>
                   <th class="text-center text-uppercase text-dark text-xxs font-weight-bolder ">Bitiş Tarihi</th>
@@ -34,19 +33,10 @@
               </thead>
               <tbody *ngFor="let bootcamp of bootcamps |bootcampList:filterBootcamp" class="text-center" >
                 <tr>
-                  <td>
-                    <div class="d-flex px-2 py-1">
-                      <div>
-                      </div>
-                      <td >
-                        <p class="text-xs font-weight-bold mb-0"></p>
-                        <p class="text-xs text-secondary mb-0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{bootcamp.id}}</p>
-                      </td>
-                    </div>
-                  </td>
+                  
                   <td>
                     <p class="text-xs font-weight-bold mb-0"></p>
-                    <p class="text-xs text-secondary mb-0">{{bootcamp.instructorId}}</p>
+                    <p class="text-xs text-secondary mb-0">{{bootcamp.instructorName}}</p>
                   </td>
                   <td class="align-middle text-center text-sm">
                     <span class="mb-0 text-sm">{{bootcamp.name}}</span>
