--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -6,6 +6,10 @@
     font-family: sans-serif;
   }
   
+ h3,h1{
+  font-weight: 500;
+ }
+
   .title {
     font-size: 1.5em;
     font-weight: 900;
@@ -36,7 +40,7 @@
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    border: 1px solid rgb(0, 0, 0);
+    /* border: 1px solid rgb(0, 0, 0); */
     border-radius: 1rem;
   }
   
@@ -65,7 +69,7 @@
  */
 
 nav{
-  /* position: fixed !important; */
+  position: fixed !important;
   width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
@@ -338,13 +342,10 @@ ol, li {
   
   transform: scale(1,1);
   transition: 1s all;
-  transform: matrix(1, -0.3, 0, 2, 1, 0);
+  transform: matrix(1, -0.3, 0, 0.8, 1, 0);
 }
 
-.bgvv{
-  background-color:#edebeb;
 
-}
 
  
 
