Change Home Page

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,6 +5,9 @@
     perspective: 1000px;
     font-family: sans-serif;
   }
+  h3,h1{
+    font-weight:500;
+  }
   
   .title {
     font-size: 1.5em;
@@ -65,7 +68,7 @@
  */
 
 nav{
-  /* position: fixed !important; */
+ position: fixed !important; 
   width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
@@ -338,7 +341,7 @@ ol, li {
   
   transform: scale(1,1);
   transition: 1s all;
-  transform: matrix(1, -0.3, 0, 2, 1, 0);
+  transform: matrix(1, -0.3, 0, 0.8, 1, 0);
 }
 
 .bgvv{
@@ -362,4 +365,9 @@ ol, li {
 
 .fasf{
   background-color: #24262b;
+}
+
+.topButton{
+  padding-left: 1170px;
+ 
 }
