--- a/src/app/components/applicant/detail-applicant/detail-applicant.component.html
+++ b/src/app/components/applicant/detail-applicant/detail-applicant.component.html
@@ -1,5 +1,5 @@
 <div class="mb-3">
-  <button type="button" class="btn btn-outline-dark mt-5" routerLink="/applicant">Geri Dön</button>
+  <button type="button" class="btn btn-outline-dark mt-5" routerLink="/admin/admin-applicant">Geri Dön</button>
   <div class="card">
     <div class="row g-0" *ngFor="let data of applicantDetail">
       <div class="col-md-4">
