--- a/src/app/components/application/add-application/add-application.component.html
+++ b/src/app/components/application/add-application/add-application.component.html
@@ -37,7 +37,7 @@
         <input class="form-control"  placeholder="durum" formControlName="state" type="number" value="23" id="example-number-input">
     </div>
     <button (click)="add()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/application">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-application">Geri Dön</button>
     </form>
   </div>
 </div>
