--- a/src/app/components/application/update-application/update-application.component.html
+++ b/src/app/components/application/update-application/update-application.component.html
@@ -21,7 +21,7 @@
         <input class="form-control"  placeholder="durum" formControlName="state" type="number" value="23" id="example-number-input">
     </div>
     <button (click)="updateApplication()" style="margin-right:15px" type="submit" class="btn btn-warning">Düzenle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/application">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-application">Geri Dön</button>
     </form>
   </div>
 </div>
