--- a/src/app/components/black-list/add-black-list/add-black-list.component.html
+++ b/src/app/components/black-list/add-black-list/add-black-list.component.html
@@ -25,7 +25,7 @@
       </div>
     
     <button (click)="addBlacklist()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/blacklist">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-blacklist">Geri Dön</button>
     </form>
   </div>
 </div>
