--- a/src/app/components/black-list/detail-black-list/detail-black-list.component.html
+++ b/src/app/components/black-list/detail-black-list/detail-black-list.component.html
@@ -1,5 +1,5 @@
 <div class="mb-3">
-  <button type="button" class="btn btn-outline-dark mt-5" routerLink="/blacklist">Geri Dön</button>
+  <button type="button" class="btn btn-outline-dark mt-5" routerLink="/admin/admin-blacklist">Geri Dön</button>
   <div class="card">
     <div class="row g-0" *ngFor="let data of blacklistDetail">
       <div class="col-md-4">
