--- a/src/app/components/bootcamp/detail-bootcamp/detail-bootcamp.component.html
+++ b/src/app/components/bootcamp/detail-bootcamp/detail-bootcamp.component.html
@@ -1,5 +1,5 @@
 <div class="mb-3">
-  <button type="button" class="btn btn-outline-dark mt-5" routerLink="/bootcampList">Geri Dön</button>
+  <button type="button" class="btn btn-outline-dark mt-5" routerLink="/admin/admin-bootcampList">Geri Dön</button>
   <div class="card">
     <div class="row g-0" *ngFor="let data of bootcampDetail">
       <div class="col-md-4">
