add-formspree-mail-service

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -200,7 +200,7 @@
                   <div class="card-body text-left">
                     <div class="p-md-0 pt-3">
                       <h5 class="font-weight-bolder mb-0">Enes Bin Malik Köksal</h5>
-                      <p class="text-uppercase text-sm font-weight-bold mb-2">Çasgem Uzman Yardımcısı</p>
+                      <p class="text-uppercase text-sm font-weight-bold mb-2">Çasgem Eğitim Uzmanı</p>
                     </div>
                    
                     <button type="button" class="btn btn-facebook btn-simple btn-lg mb-0 pe-3 ps-2">
@@ -234,7 +234,7 @@
                   <div class="card-body text-left">
                     <div class="p-md-0 pt-3">
                       <h5 class="font-weight-bolder mb-0">Serhat Taşçı</h5>
-                      <p class="text-uppercase text-sm font-weight-bold mb-2">Çasgem Uzman Yardımcısı</p>
+                      <p class="text-uppercase text-sm font-weight-bold mb-2">Çasgem Eğitim Uzmanı</p>
                     </div>
                    
                     <button type="button" class="btn btn-facebook btn-simple btn-lg mb-0 pe-3 ps-2">
@@ -268,7 +268,7 @@
                   <div class="card-body text-left">
                     <div class="p-md-0 pt-3">
                       <h5 class="font-weight-bolder mb-0">İsmail Karakaya</h5>
-                      <p class="text-uppercase text-sm font-weight-bold mb-2">Çasgem Uzman Yardımcısı</p>
+                      <p class="text-uppercase text-sm font-weight-bold mb-2">Çasgem Eğitim Uzmanı </p>
                     </div>
                    
                     <button type="button" class="btn btn-facebook btn-simple btn-lg mb-0 pe-3 ps-2">
@@ -449,7 +449,7 @@
 
       <div class="col-5 border-start" style="padding-left: 150px;">
         <h3 class="mb-6 text-center ">İletişim ve Sorularınız İçin</h3>
-        <form >
+        <form action="https://formspree.io/emircanomak34@gmail.com" method="POST">
           <div class="form-group">
             <label for="example-text-input" class="form-control-label">Ad</label>
             <input class="form-control" placeholder="ad"  type="text" id="example-text-input">
@@ -467,7 +467,7 @@
           <input class="form-control" type="text"  placeholder="telefon" id="example-date-input">
       </div>
           <div class="form-group">
-              <label for="example-text-input" class="form-control-label">Sorunuz Nedir ? </label>
+              <label for="example-text-input" class="form-control-label">Mesajınız Nedir ? </label>
               <input class="form-control" placeholder="Sorunuz"  type="text"  id="example-text-input">
           </div>
         
