--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -2,11 +2,11 @@
     <aside class=" sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark" id="sidenav-main">
      
       <hr class="horizontal dark mt-0">
-      <div class=" collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
+      <div class=" collapse navbar-collapse w-auto side-resp" id="sidenav-collapse-main">
         <ul class="navbar-nav mt-7">
           <li class="nav-item mb-3">
             <a class="nav-link  " routerLink="/admin">
-              <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>shop </title>
                   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -21,12 +21,12 @@
                   </g>
                 </svg>
               </div>
-              <span class="nav-link-text ms-1 text-light fs-4">Anasayfa</span>
+              <span class="nav-link-text ms-1 fs-20 text-light fs-4">Anasayfa</span>
             </a>
           </li>
           <li class="nav-item mb-3">
             <a class="nav-link" routerLink="admin-bootcampList">
-              <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>office</title>
                   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -41,12 +41,12 @@
                   </g>
                 </svg>
               </div>
-              <span class="nav-link-text ms-1 text-light fs-4" >Bootcamp</span>
+              <span class="nav-link-text ms-1 fs-20 text-light fs-4" >Bootcamp</span>
             </a>
           </li>
           <li class="nav-item mb-3">
             <a class="nav-link" routerLink="admin-application"> 
-              <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>credit-card</title>
                   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -61,12 +61,12 @@
                   </g>
                 </svg>
               </div>
-              <span class="nav-link-text ms-1 text-light fs-4">Başvurular</span>
+              <span class="nav-link-text ms-1 fs-20 text-light fs-4">Başvurular</span>
             </a>
           </li>
           <li class="nav-item mb-3">
             <a class="nav-link" routerLink="admin-blacklist">
-              <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>box-3d-50</title>
                   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -82,12 +82,12 @@
                   </g>
                 </svg>
               </div>
-              <span class="nav-link-text ms-1 text-light fs-4">Kara Liste</span>
+              <span class="nav-link-text ms-1 fs-20 text-light fs-4">Kara Liste</span>
             </a>
           </li>
           <li class="nav-item mb-3">
             <a class="nav-link" routerLink="admin-applicant">
-              <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>settings</title>
                   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -103,13 +103,13 @@
                   </g>
                 </svg>
               </div>
-              <span class="nav-link-text ms-1 text-light fs-4">Adaylar</span>
+              <span class="nav-link-text ms-1 fs-20 text-light fs-4">Adaylar</span>
               
             </a>
           </li>
           <li class="nav-item mb-3">
             <a class="nav-link" routerLink="admin-instructor">
-              <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>settings</title>
                   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -125,12 +125,12 @@
                   </g>
                 </svg>
               </div>
-              <span class="nav-link-text ms-1 text-light fs-4">Eğitmenler</span>
+              <span class="nav-link-text ms-1 fs-20 text-light fs-4">Eğitmenler</span>
             </a>
           </li>
           <li class="nav-item mb-3">
             <a class="nav-link  " routerLink="admin-employee">
-              <div class="icon icon-shape icon-md shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+              <div class="icon icon-shape icon-md i-40 shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                 <svg width="20px" height="20px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <title>settings</title>
                   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -146,7 +146,7 @@
                   </g>
                 </svg>
               </div>
-              <span class="nav-link-text ms-1 text-light fs-4">Çalışanlar</span>
+              <span class="nav-link-text ms-1 fs-20 text-light fs-4">Çalışanlar</span>
               
             </a>
           </li>
