--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -6,8 +6,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto">
-            <h1 class="text-white mb-2 mt-5">Welcome!</h1>
-            <p class="text-lead text-white">Use these awesome forms to login or create new account in your project for free.</p>
+            <h1 class="text-white mb-2 mt-5">Hoşgeldiniz!</h1>
+            <p class="text-lead text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque excepturi ipsum tenetur harum nulla reiciendis voluptatum rerum officiis adipisci provident?</p>
           </div>
         </div>
       </div>
@@ -17,7 +17,7 @@
         <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
           <div class="card z-index-0">
             <div class="card-header text-center pt-4">
-              <h5>Register with</h5>
+              <h5>Kayıt Ol</h5>
             </div>
             <div class="row px-xl-5 px-sm-4 px-3">
               <div class="col-3 ms-auto px-1">
@@ -59,7 +59,7 @@
               </div>
               <div class="mt-2 position-relative text-center">
                 <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3">
-                  or
+                  veya
                 </p>
               </div>
             </div>
@@ -80,13 +80,16 @@
                 <div class="form-check form-check-info text-left">
                   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
                   <label class="form-check-label" for="flexCheckDefault">
-                    I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
+                    Koşulları<a href="javascript:;" class="text-dark font-weight-bolder"> kabul ediyorum</a>
                   </label>
                 </div>
                 <div class="text-center">
-                  <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2" (click)="add()" routerLink="/login">Sign up </button>
+                  <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2" (click)="add()" routerLink="/login">Kayıt Ol</button>
                 </div>
-                <p class="text-sm mt-3 mb-0">Already have an account? <a routerLink="/home-login" class="text-dark font-weight-bolder">Sign in</a></p>
+                <div class="text-center">
+                  <button type="button" class="btn bg-gradient-info w-100 my-4 mb-2" routerLink="">Geri Dön</button>
+                </div>
+                <p class="text-sm mt-3 mb-0">Hesabın var mı?<a routerLink="/home-login" class="text-dark font-weight-bolder"> Giriş Yap</a></p>
               </form>
             </div>
           </div>
@@ -141,7 +144,7 @@
           <p class="mb-0 text-secondary">
             Copyright © <script>
               document.write(new Date().getFullYear())
-            </script> Soft by Creative Tim.
+            </script> Pair Four Academy.
           </p>
         </div>
       </div>
