--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,7 @@
 <router-outlet></router-outlet>
 <!--navbar start-->
-<<<<<<< HEAD <div>
-  =======
+<div>
   <div class="bgvv">
-    >>>>>>> 4f517c31e79ec97b57459366808c3e875ab790f2
     <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3 top-0">
       <div class="container ">
         <a class="navbar-brand " name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
@@ -21,7 +19,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a href="#bootcampler" class="nav-link text-body font-weight-bold">
+                    <a href="#bootcampler" class="nav-link text-body font-weight-bold navhov">
                       <span class="d-sm-inline d-none text-light tt">BOOTCAMPLER</span>
                     </a>
                   </li>
@@ -33,7 +31,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a href="#egitmenler" class="nav-link text-body font-weight-bold">
+                    <a href="#egitmenler" class="nav-link text-body font-weight-bold navhov">
                       <span class="d-sm-inline d-none text-light tt">EĞİTMENLER </span>
                     </a>
                   </li>
@@ -45,7 +43,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a href="#hakkımızda" class="nav-link text-body font-weight-bold">
+                    <a href="#hakkımızda" class="nav-link text-body font-weight-bold navhov">
                       <span class="d-sm-inline d-none text-light tt">HAKKIMIZDA </span>
                     </a>
                   </li>
@@ -59,7 +57,7 @@
 
                 <a class="text-white cursor-pointer">
                   <li class="nav-item d-flex align-items-center">
-                    <a routerLink="/home-login" class="nav-link text-body font-weight-bold">
+                    <a routerLink="/home-login" class="nav-link text-body font-weight-bold navhov">
                       <i class="fa fa-user me-sm-1 text-light px-1"></i>
                       <span class="d-sm-inline d-none text-light tt">GİRİŞ YAP </span>
                     </a>
@@ -70,7 +68,7 @@
               <div class="col-auto m-auto">
                 <div class="dropdown">
                   <li class="nav-item d-flex align-items-center">
-                    <a routerLink="/home-register" class="nav-link text-body font-weight-bold ">
+                    <a routerLink="/home-register" class="nav-link text-body font-weight-bold navhov ">
                       <i class="fa fa-user me-sm-1 text-light px-1 "></i>
                       <span class="d-sm-inline d-none text-light tt">KAYIT OL</span>
                     </a>
