--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -26,6 +26,9 @@
                   <div class="text-center">
                     <button type="button" class="btn bg-gradient-info w-100 mt-4 mb-0" (click)="login()">Giriş Yap</button>
                   </div>
+                  <div class="text-center">
+                    <button type="button" class="btn bg-gradient-dark w-100 mt-4 mb-0" routerLink="">Geri Dön</button>
+                  </div>
                 </form>
               </div>
               <div class="card-footer text-center pt-0 px-lg-2 px-1">
@@ -93,7 +96,7 @@
         <p class="mb-0 text-secondary">
           Copyright © <script>
             document.write(new Date().getFullYear())
-          </script> Soft by Creative Tim.
+          </script> Pair Four Academy.
         </p>
       </div>
     </div>
